# bilibili-studio

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md
base/: base.sln  base.vcxproj  base.vcxproj.filters  base_i18n.vcxproj  base_i18n.vcxproj.filters  base_i18n_nacl_win64.vcxproj  base_nacl_win64.vcxproj  base_nacl_win64.vcxproj.filters  base_prefs.vcxproj  base_prefs_test_support.vcxproj  base_static.vcxproj  base_static.vcxproj.filters  base_static_win64.vcxproj  base_unittests.vcproj  base_unittests.vcxproj  base_unittests.vcxproj.filters  base_unittests_run.rules  base_unittests_run.vcxproj  base_untrusted.sln  base_untrusted.vcxproj  base_untrusted.vcxproj.filters  check_example.vcxproj  debug_message.vcxproj  logging.cc  logging.h  run_all_unittests.vcxproj  test_support_base.vcxproj  test_support_base.vcxproj.filters  test_support_perf.vcxproj  test_support_perf.vcxproj.filters  values.cc  values.h
bilibase/: apply_tuple_to_function.h  apply_tuple_to_function_unittest.cpp  basic_macros.h  basic_types.h  bilibase.vcxproj  bilibase.vcxproj.filters  bilibase_unittest.vcxproj  bilibase_unittest.vcxproj.filters  data_view.h  data_view_unittest.cpp  enum_ops_unittest.cpp  error_exception_util.cpp  error_exception_util.h  lambda_decay.h  lambda_decay_unittest.cpp  math_util.h  math_util_unittest.cpp  rational.h  scope_guard.h  signals.h  string_encoding_conversions.cpp  string_encoding_conversions.h  string_format.cpp  string_format.h  test_run.cpp
bililive/: LICENSE.BSD  VERSION  bililive.sln  bililive.vcxproj  bililive.vcxproj.filters  bililive_face_detect.vcxproj  bililive_live2d.vcxproj  bililive_live2d.vcxproj.filters  bililive_main_dll.vcxproj  bililive_main_dll.vcxproj.filters  bililive_motion.vcxproj  bililive_motion.vcxproj.filters  bililive_resources.sln  bililive_secret.vcxproj  bililive_secret.vcxproj.filters  bililive_secret_unittest.vcxproj  bililive_secret_unittest.vcxproj.filters  bililive_strings.vcxproj  bililive_unittest.vcxproj  bililive_version_resources.props  bililive_version_resources.targets  bililive_version_resources.vcxproj  bililive_version_resources.xml  livehime_dev_tool.vcxproj  livehime_dev_tool.vcxproj.filters  packed_resources.vcxproj  path-config.props  theme_resources_gen.vcxproj
cmake/: common_config.cmake  common_macros.cmake  common_variables.cmake  copy_helper.cmake  copy_on_debug_helper.cmake
crypto/: crypto.sln  crypto.vcproj  crypto.vcxproj  crypto.vcxproj.filters  crypto_nacl_win64.vcproj  crypto_nacl_win64.vcxproj  crypto_nacl_win64.vcxproj.filters  crypto_unittests.vcproj  crypto_unittests.vcxproj  crypto_unittests.vcxproj.filters  ghash.cc
docs/: obs_cmake_help.md
ipc/: ipc.sln  ipc.vcxproj  ipc_message_utils.cc  ipc_perftests.vcxproj  ipc_tests.vcxproj  ipc_untrusted.sln  ipc_untrusted.vcxproj  ipc_untrusted.vcxproj.filters  ipc_win64.vcxproj  test_support_ipc.vcxproj
net/: crash_cache.vcproj  crash_cache.vcxproj  crl_set_dump.vcproj  crl_set_dump.vcxproj  dns_fuzz_stub.vcproj  dns_fuzz_stub.vcxproj  dump_cache.vcproj  dump_cache.vcxproj  fetch_client.vcproj  fetch_client.vcxproj  fetch_server.vcproj  fetch_server.vcxproj  gdig.vcproj  gdig.vcxproj  get_server_time.vcproj  get_server_time.vcxproj  http_server.vcproj  http_server.vcxproj  net.sln  net.vcproj  net.vcxproj  net.vcxproj.filters  net_base.vcproj  net_perftests.vcproj  net_perftests.vcxproj  net_resources.vcproj  net_resources.vcxproj  net_resources.vcxproj.filters  net_test_support.vcproj  net_test_support.vcxproj  net_unittests.vcproj  net_unittests.vcxproj  net_watcher.vcproj  (+14 more)
obs/obs-studio/test/win/: CMakeLists.txt
(+1939 files in other folders)
